--- a/formulario_comida.html
+++ b/formulario_comida.html
@@ -49,7 +49,7 @@
                         <option value="Salsa de chuleta con arroz"/>
                         <option value="Pollo a la cocacola "/>
                         <option value="Hamburguessa con papas "/>
-                        <option value="Enchiladas suiza"/>
+                        <option value="Enchiladas suizas"/>
                         <option value="Sandwinch"/>
                     </datalist>
                 </td>
